[package]
name = "proglog"
version = "0.1.0"
authors = ["Kris Scott <kscott91@gmail.com>"]
edition = "2018"
default-run = "example"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
atty = "0.2"
clap = "~2.33.0"
crossterm = "0.17"
dotenv = "0.15"
indicatif = "0.15"
log = "0.4"
log4rs = "0.13"
